修改部分依赖

--- a/productorser/src/main/resources/application.yml
+++ b/productorser/src/main/resources/application.yml
@@ -48,7 +48,7 @@ eureka:
     lease-expiration-duration-in-seconds: 20
     lease-renewal-interval-in-seconds: 10
     prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ipAddress}:${server.port}:${spring.application.name}
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}:${spring.application.name}
   client:
     registry-fetch-interval-seconds: 10
 
