--- a/turbineser/src/main/resources/bootstrap.yml
+++ b/turbineser/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ eureka:
     lease-expiration-duration-in-seconds: 20
     lease-renewal-interval-in-seconds: 10
     prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ipAddress}:${server.port}:${spring.application.name}
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}:${spring.application.name}
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
